--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "_test": "deno test test",
     "lint": "deno fmt src && deno fmt test",
-    "build": "mkdirp dist && deno bundle src/browser.tsx > dist/browser.js",
+    "build": "# mkdirp dist && deno bundle src/browser.tsx > dist/browser.js",
     "start": "npm run build && sandbox"
   },
   "devDependencies": {
